--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,14 @@
     padding: 0;
     box-sizing: border-box;
     font: helvetica;
+    background-color: bisque;
 }
+ /* link styling */
+a:link {
+    color:#946b45;
+    text-decoration: none;
+}
+/* link styles end */
 
 /* title style */
 .header-title {
@@ -14,11 +21,15 @@
 }
 /* title end */
 
+/* navigation style */
 .navigation {
+    color: #946b45;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    list-style-type: none;
 }
+/* navigation end */
 
 /* body style */
 body {
