--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,17 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    background-color:  #f2e6d9;
 }
+
+/* body style */
+body {
+    color: #453823;
+    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    background-color:  white, 0.1;
+}
+/* end body */
+
  /* link styling */
 a:link {
     color: #946b45;
@@ -19,12 +26,15 @@ a:hover {
 
 /* title style */
 .header-title {
-    font: helvetica;
-    font-size: 200%;
+    font-size: 400%;
     text-transform: uppercase;
     letter-spacing: 5px;
-    text-align: center;
-    padding: 10%;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    vertical-align: baseline;
+    background: transparent;
 }
 /* title end */
 
@@ -32,21 +42,13 @@ a:hover {
 .navigation {
     text-decoration: none;
     color: #946b45;
-    font-size: 16px;
+    font-size: 24px;
+    list-style-type: none;  
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
-    list-style-type: none;  
-    width: 100%;
+    padding: 10%;
 }
 /* navigation end */
-
-/* body style */
-body {
-    color: #453823;
-    text-align: center;
-}
-/* end body */
 
 /* hero styling */
 .hero {
@@ -64,9 +66,6 @@ h2 {
 }
 
 .work-items{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
     padding: 10%;
 }
 /* work style ends */
@@ -79,9 +78,8 @@ h2 {
 
 /* contact aside style */
 .contact {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    text-decoration: none;
+    padding: 10%;
     
 }
 /* contact style ends */
@@ -89,16 +87,14 @@ h2 {
 
 /* footer style */
 footer {
-    padding-bottom: 20px;
+    padding-bottom: 10%;
+    background-color: bisque;
+}
+
+footer p {
+    text-align: center;
 }
 
 /* media styles start */
-@media only screen and (max-width: 900px) {
-
-} .navigation {
-    display: flex;
-    overflow: auto;
-};
+/* @media only screen and (max-width: 900px) { */
 /* media styles end */
-
-
