adding images, cleaning up html

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
     color: #453823;
     font: garamond;
     background-color:  white, 0.1;
+    font-size: 3vw;
 }
 /* end body */
 
@@ -33,7 +34,7 @@ a:hover {
 
 /* header style */
 header {
-    padding: 80px 140px;
+    padding: 10vw;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -41,10 +42,10 @@ header {
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    background-position: 80%;
     z-index: 9999;
     position: -webkit-sticky;
     position: sticky;
+    max-width: 100%;
 }
 
 header h1 {
@@ -75,7 +76,7 @@ header nav ul li a {
     padding: 10px 15px;
     text-decoration: none;
     color: #946b45;
-    font-size: 24px;
+    font-size: 3vw;
     text-align: center;
 }
 
@@ -109,33 +110,39 @@ h2 {
 }
 
 .work-items{
-    padding: 10%
+    padding: 10%;
+    display: inline-flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.work {
+    padding: 5%;
 }
 /* work style ends */
 
 /* about me style */
 .about-flex {
-    display: flex;
+    display: inline-flex;
     flex-wrap: wrap;
 }
 
 .about-me-img {
-    margin: 20px 0;
-    line-height: 1.5;
     padding: 5%;
 }
 
 .about-text {
     text-align: left;
-    font-size: 16px;
+    font-size: 2vw;
     font-style: oblique;
     padding: 5%;
+    overflow: auto;
 }
 /* about me ends */
 
 /* contact aside style */
 .contact {
-    font-size: 3vw;
+    font-size: 2vw;
     text-decoration: none;
     list-style-type: none;
     padding: 5%;
@@ -164,5 +171,17 @@ footer p {
 }
 
 /* media styles start */
-/* @media only screen and (max-width: 900px) { */
+
+@media only screen and (max-width: 700px) {
+.work-items .about-flex {
+      width: 49.99999%;
+      margin: 6px 0;
+    }
+  }
+
+  @media only screen and (max-width: 500px) {
+.work-items .about-flex {
+      width: 100%;
+    }
+  }
 /* media styles end */
