--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,12 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
+    font-family: 'Holtwood One SC', serif;
 }
 
 :root {
     --main-color: #453823;
-    --padding: 5%;
+    --padding: 5%; 
 }
 
 .flex-row {
@@ -19,7 +20,6 @@
 /* body style */
 body {
     color: var(--main-color);
-    font: garamond;
     background-color:  white, 0.1;
     font-size: 2vw;
 }
@@ -53,7 +53,7 @@ header {
 
 header h1 a, header h1 {
     font-weight: bold;
-    font-size: 6vw;
+    font-size: 5vw;
     letter-spacing: 6px;
     background: transparent;
     opacity: 0.5;
@@ -100,9 +100,9 @@ h2 {
     padding: var(--padding);
     font-size: 4vw;
     letter-spacing: 5px;
-    border-bottom: 1px solid black;
+   
 }
-
+/*
 .work-items{
     padding: var(--padding);
     display: inline-flex;
@@ -110,14 +110,63 @@ h2 {
     justify-content: space-between;
     align-content: center;
 }
+*/
 
 .work {
     padding: 5%;
 }
-
+/*
 article img {
     border: 0.1rem solid;
     border-color: var(--main-color); 
+}
+*/
+
+.swipe-container {
+    
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+   
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
+    position: relative;
+    color: #67645e;
+    padding: 1rem;
+    
+ 
+}
+
+.work-items {
+  
+
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+    background-color:white;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
+    position: relative;
+    color: #67645e;
+    padding: 1rem;
+}
+
+.img-box {
+    
+    background:  #f2f2f2;
+    padding: 20px;
+    width: 200px;
+    height: 150px;
+    border-radius: 25px;
+    box-sizing: border-box;
+    display: block;
+    width: auto;
+    height: auto;
+    overflow: hidden;
+    
+    opacity: 1;
+    border: 0px;
+    margin: 0px;
 }
 /* work section ends */
 
